--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
  body {
     font-family: 'Raleway', sans-serif;
-    background-image: url("../images/Background.jpg");
     width: 100%;
     height: auto;
     background-repeat: no-repeat;
@@ -15,7 +14,7 @@
     margin: 4rem auto;
     padding: .6rem;
   }
-  #main {
+  #main-form {
       padding: 0% 20% 0% 20%;
   }
 
