--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,34 @@
- body {
-    font-family: 'Raleway', sans-serif;
-    width: 100%;
-    height: auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #45b6eb;
-    color: #fff;
-    font-size: 1.2vw;
-   }
+body {
+  background-color: #f2f2f2;
+  color: #333;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
+title {
+  font-family: Arial, sans-serif;
+}
+h1 {
+   font-size: 32px;
+   font-weight: bold;
+   margin-top: 20px;
+   margin-bottom: 10px;
+   text-transform: uppercase;
+   color: #333;
+}
 
   #heading {
     max-width: 750px;
     margin: 4rem auto;
     padding: .6rem;
   }
+
   #main-form {
-      padding: 0% 20% 0% 20%;
+  background-color: #f2f2f2;
+  padding: 20px;
+  border: 1px solid #ccc;
+  padding: 0% 20% 0% 20%;
   }
 
   #title {
@@ -26,9 +39,11 @@
   }
 
   #description {
-    font-size: 1.1rem;
     text-align: center;
     padding: .2rem;
+   font-size: 16px; 
+   color: #333; 
+   font-family: Arial;
   }
 
   #survey-form {
@@ -37,14 +52,18 @@
     border-radius: 7px;
   }
 
-  #submit {
-    background: #22d87d;
-    color: #fff;
-    padding: .7rem;
-    font-size: 1.15rem;
-    cursor: pointer;
-  }
-
+  input[type="submit"] { 
+   background-color: #4CAF50;
+   color: white; 
+   border: none; 
+   padding: 10px 20px;
+   text-align: center; 
+   text-decoration: none; 
+   display: inline-block; 
+   font-size: 16px; 
+   margin: 4px 2px;
+   cursor: pointer;
+}
   #submit:hover {
     background: rgb(9, 168, 89);
   }
